# rita-graph

./: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
_outlines_/: 08042024.md  08062024.md  backlog.md
src/: App.css  App.tsx  defaults.tsx  index.css  main.tsx  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: graph.rs  graph_json.rs  main.rs  messages.rs
src-tauri/src/playback/: mod.rs  player.rs  process.rs  spec.rs
src/components/: combobox.tsx
src/components/nodes/: BinOpNode.tsx  InputNode.tsx  OutputNode.tsx  WaveGenNode.tsx  index.ts
src/components/ui/: card.tsx
src/edges/: ButtonEdge.tsx  index.ts
src/lib/: utils.ts
src/nodes/: InputNode.tsx  OutputNode.tsx
